# copernicus2roms-plusplus

./: .gitignore  CMakeLists.txt  MyOcean2ROMS.cpp  README.md
jncregridder/data/copernicus/: CopernicusBase.cpp  CopernicusBase.h  CopernicusCur.cpp  CopernicusCur.h  CopernicusSSH.cpp  CopernicusSSH.h  CopernicusSal.cpp  CopernicusSal.h  CopernicusTem.cpp  CopernicusTem.h
jncregridder/roms/: ROMSBoundary.cpp  ROMSBoundary.h  ROMSGrid.cpp  ROMSGrid.h  ROMSInit.cpp  ROMSInit.h
jncregridder/util/: BilinearInterpolator.cpp  BilinearInterpolator.h  BilinearInterpolator3D.cpp  BilinearInterpolator3D.h  InterpolatorBase.cpp  InterpolatorBase.h
